<resources>
    <string name="app_name">QuizGame</string>
    <string name="greeting">Проверь свои знания вместе с QuizGame!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startButton">Начать</string>
    <string name="question1">Какой город считается древнейшим городом на Земле?</string>
    <string name="answer_1_1">Афины</string>
    <string name="answer_1_2">Иерихон</string>
    <string name="answer_1_3">Иерусалим</string>
    <string name="question2">Какая звезда самая яркая на небе?</string>
    <string name="answer_2_1">Сириус</string>
    <string name="answer_2_2">Бетельгейзе</string>
    <string name="answer_2_3">Проксима Центавра</string>
    <string name="question3">Какие животные собираются в группы, называемые прайдами?</string>
    <string name="answer_3_1">Львы</string>
    <string name="answer_3_2">Зебры</string>
    <string name="answer_3_3">Слоны</string>
</resources>