<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    tools:context=".QuestionsFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/question1"/>
        
        <RadioGroup
            android:id="@+id/rdGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <RadioButton
                android:id="@+id/answer_1_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_1_1"/>

            <RadioButton
                android:id="@+id/answer_1_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_1_2"/>

            <RadioButton
                android:id="@+id/answer_1_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_1_3"/>
        </RadioGroup>


        <TextView
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/question2"/>

        <RadioGroup
            android:id="@+id/rdGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer_2_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_2_1"/>

            <RadioButton
                android:id="@+id/answer_2_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_2_2"/>

            <RadioButton
                android:id="@+id/answer_2_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_2_3"/>
        </RadioGroup>


        <TextView
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/question3"/>

        <RadioGroup
            android:id="@+id/rdGroup3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer_3_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_3_1"/>

            <RadioButton
                android:id="@+id/answer_3_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_3_2"/>

            <RadioButton
                android:id="@+id/answer_3_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_3_3"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button
            android:id="@+id/backToGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    </LinearLayout>
</ScrollView>